updated scale logic

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TestBuild_Merianstich.loader.js";
+      var loaderUrl = buildUrl + "/merianstich_demo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestBuild_Merianstich.data",
-        frameworkUrl: buildUrl + "/TestBuild_Merianstich.framework.js",
-        codeUrl: buildUrl + "/TestBuild_Merianstich.wasm",
+        dataUrl: buildUrl + "/merianstich_demo.data",
+        frameworkUrl: buildUrl + "/merianstich_demo.framework.js",
+        codeUrl: buildUrl + "/merianstich_demo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "amplify design GmbH",
         productName: "Medientisch_Merianstich_Unity",
